// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MergeReportsDialog Component should render a component, pending: pending 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-3"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-1"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-2"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-1"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        <h4
          class="pf-c-title pf-m-md"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Merge reports
        </h4>
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-3"
      >
        <div>
          <div
            class="blank-slate-pf-icon spinner spinner-lg"
          />
          <div
            class="text-center"
          >
            Merging reports...
          </div>
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          t(form-dialog.label_submit, {"context":"merge-reports"})
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          t(form-dialog.label, {"context":"cancel"})
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`MergeReportsDialog Component should render a connected component: connected 1`] = `<Connect(MergeReportsDialog) />`;

exports[`MergeReportsDialog Component should render a non-connected component, failure and success: non-connected 1`] = `
<div
  class="pf-c-backdrop"
>
  <div
    class="pf-l-bullseye"
  >
    <div
      aria-describedby="pf-modal-part-2"
      aria-label="t(modal.aria-label-default)"
      aria-labelledby="pf-modal-part-0"
      aria-modal="true"
      class="pf-c-modal-box pf-m-align-top"
      data-ouia-component-id="OUIA-Generated-Modal-1"
      data-ouia-component-type="PF4/ModalContent"
      data-ouia-safe="true"
      id="pf-modal-part-0"
      role="dialog"
      style="--pf-c-modal-box--m-align-top--spacer: 5%;"
    >
      <header
        class="pf-c-modal-box__header"
      >
        <h4
          class="pf-c-title pf-m-md"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Merge reports
        </h4>
      </header>
      <div
        class="pf-c-modal-box__body"
        id="pf-modal-part-2"
      >
        <div>
          <div
            class="merge-reports-body"
          >
            <span
              class="merge-reports-icon"
            >
              <span
                aria-hidden="true"
                class="pficon pficon-error-circle-o"
              />
            </span>
            <span>
              <h3
                class="merge-reports-heading"
              >
                This action is invalid. You must select at least two scans with successful most recent scans.
              </h3>
              <div>
                <div>
                  <span>
                    Scans to be included in the merged report:
                  </span>
                  <ul>
                    <li>
                      lorem
                    </li>
                  </ul>
                </div>
                <div>
                  <span>
                    Failed scans that cannot be included in the merged report:
                  </span>
                  <ul>
                    <li>
                      ipsum
                    </li>
                  </ul>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
      <footer
        class="pf-c-modal-box__footer"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          t(form-dialog.label_submit, {"context":"merge-reports"})
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          t(form-dialog.label, {"context":"cancel"})
        </button>
      </footer>
    </div>
  </div>
</div>
`;
